2010-09-15 Josh Kropf <josh@slashdev.ca>

	* RapcTask.java (executeRapc): only copy JVM arguments that start with -X
	  when launching rapc; in rare instances Ant can be launched with args
	  that do NOT have properly escaped spaces and cause confusion when copying
	  these arguments.
	  (executeRapc): use all lower case for -noWarn switch
	  (executeRapc): removed extra separator in PREPROCESSOR line


2010-04-13 Josh Kropf <josh@slashdev.ca>

	* RapcTask.java (executeRapc): copy Ant's JVM arguments when launching rapc
	  compiler; fixes memory allocation issues when compiling large projects


2010-04-06 Josh Kropf <josh@slashdev.ca>

	* RapcTask.java (setJdkHome): bug fix - check 'jdkHome' for bin directory
	  not 'jdeHome' from the base class


2010-02-22 Josh Kropf <josh@slashdev.ca>

	* BaseJdpType.java (setIcon): check non-null AND non-empty string
	  (setFocusIcon): check non-null AND non-empty string
	  (setFile): use null as default for icon when properties file missing attribute


2010-02-16 Josh Kropf <josh@slashdev.ca>

	* BaseJdpType.java: new base class for JdpType and EntryPointType that
	  contains common properties shared by the two.
	* EntryPointType.java: now derived from BaseJdpType
	* JdpType: now derived from BaseJdpType
	  (writeManifest): output extra icons and focus icons to manifest file
	* Utils.java (join): new method, join array of strings with commas.


2009-09-15 Josh Kropf <josh@slashdev.ca>

	* RapcTask.java (nopreverify): applied patch from Phil Smith that passes
	  flag to rapc compiler instructing it to skip preverify step.


2009-09-11 Josh Kropf <josh@slashdev.ca>

	* JadtoolTask.java (executeRewrite): trim spaces from the value part of
	  key/value pairs in origional .jad file.


2009-09-11 Josh Kropf <josh@slashdev.ca>

   * JadtoolTask.java: applied patch from Marek Uhel to fix incorrect numbering
     of RIM-COD-URL-* attributes in generated .jad file.


2009-07-08 Josh Kropf <josh@slashdev.ca>
